--- a/proyecto1/src/app/app.component.html
+++ b/proyecto1/src/app/app.component.html
@@ -1,5 +1,3 @@
-<h1>{{titulo}}</h1>
-<p> Hola mundo desde app component</p>
-
-<app-contador></app-contador>
-<app-imagen></app-imagen>
+<app-header></app-header>
+<app-content></app-content>
+<app-footer></app-footer>
