--- a/proyecto1/src/app/contador/contador.component.html
+++ b/proyecto1/src/app/contador/contador.component.html
@@ -1,2 +1,4 @@
 <h1>Contador component</h1>
 <p>Contador: {{contador}}</p>
+<button (click)="incrementa(10)">+10</button>
+<button (click)="decrementa(10)">-10</button>
