--- a/proyecto1/src/app/imagen/imagen.component.html
+++ b/proyecto1/src/app/imagen/imagen.component.html
@@ -1,2 +1,4 @@
 <h1>Imagen component</h1>
-<p>Hola mundo desde imagen component</p>
+<!-- <img src="https://picsum.photos/200/300" alt="Esta es una imagen de prueba"> -->
+<!-- <img src="{{imgSrc}}" alt="{{imgAlt}}"> -->
+<img [src]="imgSrc" [alt]="imgAlt">
