--- a/proyecto1/src/app/app.component.html
+++ b/proyecto1/src/app/app.component.html
@@ -1,1 +1,4 @@
+<app-shows-list [tvShows]="tvShows1"></app-shows-list>
+<app-shows-list [tvShows]="tvShows2"></app-shows-list>
 <app-shows-list></app-shows-list>
+<app-show [tvShow]="singularShow"></app-show>
