--- a/proyecto1/src/app/components/show/show.component.html
+++ b/proyecto1/src/app/components/show/show.component.html
@@ -1,4 +1,5 @@
 <div class="card">
+    <button (click)="removeCard()">X</button>
     <p>{{tvShow.title}}</p>
     <img [src]="tvShow.image" alt="">
     <p>Episodios: {{tvShow.episodes}}</p>
