--- a/proyecto1/src/app/components/show/show.component.css
+++ b/proyecto1/src/app/components/show/show.component.css
@@ -1,6 +1,13 @@
 .card{
     width: 200px;
     margin: 10px;
+    border: 1px solid black;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.selected{
+    background-color: beige;
 }
 
 img {
