--- a/proyecto1/src/app/app.component.html
+++ b/proyecto1/src/app/app.component.html
@@ -1,2 +1,5 @@
+<button (click)="setAllAs(true)">Seleccionar todos</button>
+<button (click)="setAllAs(false)">Deseleccionar todos</button>
+
 <app-control (invertListEvent)="executeInvertList()"></app-control>
 <app-shows-list #showsList [tvShows]="tvShows"></app-shows-list>
