--- a/proyecto1/src/app/control/control.component.html
+++ b/proyecto1/src/app/control/control.component.html
@@ -1,3 +1,3 @@
-<button (click)="setAllAs(true)">Seleccionar todos</button>
-<button (click)="setAllAs(false)">Deseleccionar todos</button>
+<button (click)="onClickSetAll()">Seleccionar todos</button>
+<button (click)="onClickUnsetAll()">Deseleccionar todos</button>
 <button (click)="invertList()">Invertir Lista</button>
