Clase de 26 de Febrero

--- a/proyecto1/src/app/app.component.html
+++ b/proyecto1/src/app/app.component.html
@@ -1,5 +1,5 @@
 <button (click)="setAllAs(true)">Seleccionar todos</button>
 <button (click)="setAllAs(false)">Deseleccionar todos</button>
 
-<app-control (setAllAs)="setAllAs($event)" (invertListEvent)="executeInvertList()"></app-control>
+<app-control (setAllAs)="setAllAs($event)" (onSearch)="searchByTerm($event)" (invertListEvent)="executeInvertList()"></app-control>
 <app-shows-list #showsList [tvShows]="tvShows"></app-shows-list>
