Clase 7 de Marzo

--- a/rutas/src/app/pages/tv-shows/tv-shows.page.html
+++ b/rutas/src/app/pages/tv-shows/tv-shows.page.html
@@ -4,4 +4,4 @@
 <button (click)="setAllAs(false)">Deseleccionar todos</button>
 
 <app-control (setAllAs)="setAllAs($event)" (onSearch)="searchByTerm($event)" (invertListEvent)="executeInvertList()"></app-control>
-<app-shows-list #showsList [tvShows]="tvShows"></app-shows-list>
+<app-shows-list #showsList [tvShows]="tvShows2"></app-shows-list>
