--- a/rutas/src/app/control/control.component.css
+++ b/rutas/src/app/control/control.component.css
@@ -1,3 +1,14 @@
 button{
     margin: 5px;
 }
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-container label,
+.form-container input,
+.form-container button {
+    margin-bottom: 10px;
+}
